--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -2,14 +2,11 @@
     height: 86vh;
     width: 100vw;
     display: flex;
-    /* flex-direction: column; */
     align-items: center;
     justify-content:space-between;
-    /* padding: 30px; */
 }
 
 .log-login-form{
-    /* border: 5px solid blue; */
     width: 50%;
     height:100%;
     display: flex;
@@ -25,7 +22,6 @@
 }
 
 .log-input-fields{
-    /* border: 1px solid red; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -47,7 +43,6 @@
 }
 
 .log-design-part{
-    /* border: 5px solid rgb(211, 210, 210); */
     border-radius:  65px 0px 0px 65px;
     width: 50%;
     height:100%;
@@ -55,7 +50,6 @@
     flex-direction:column;
     align-items:center;
     justify-content:center;
-    /* background: rgb(211, 210, 210); */
     background: #1D1A26;
     color: white;
 }
@@ -85,6 +79,12 @@
 .log-login-form p{
     padding: 5px;
     margin-left: -25px;
+}
+
+.loader{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
